tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index-no-similar/expected.err
Error: invalid index on symbolic subscript array 'foo'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index-no-similar/input.k65:7:12 ]
   │
 7 │     lda foo[buffer]
   │            ────┬───  
   │                ╰───── aggregate index without repeat count
   │ 
   │ Help: `foo[index]` selects a repeated element only when `foo` is declared with `* count`; add `* N` to the declaration for element access, or use '.field' or '[.field]' for named field access
   │ 
   │ Note: The `[ ... ]` after a symbolic-subscript var has two meanings: `.field` selects a named field, while numeric indices select repeat elements from `var NAME[...] * N`.
───╯
